[package]
authors = ["Natsune Mochizuki <me@natsuneko.cat>"]
categories = ["command-line-utilities"]
description = "Ethereum JSON-RPC Client for Command Line Interfaces"
edition = "2021"
homepage = "https://github.com/mika-f/tuna"
license = "MIT or Apache-2.0"
name = "tuna"
readme = "readme.md"
repository = "https://github.com/mika-f/tuna"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "tuna"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = {version = "3", features = ["suggestions", "color", "derive", "env"]}
http = "0"
jsonrpsee = {version = "0.15", features = ["client"]}
serde = "1"
serde_json = "1"
syntect = "5"
tokio = {version = "1", features = ["full"]}
